Try to fix footer overflow on mobile

--- a/app/assets/styles/layout/_footer.scss
+++ b/app/assets/styles/layout/_footer.scss
@@ -1,5 +1,6 @@
 footer {
     width: 100%;
+    overflow-x: hidden;
 }
 
 .footer__container,
@@ -8,7 +9,6 @@ footer {
     max-width: 100%;
     overflow-x: hidden;
     box-sizing: border-box;
-    max-height: none;
 }
 
 .footer-mobile__container-links-social,
@@ -101,6 +101,7 @@ footer {
 .footer-mobile__container {
     font-size: calc(0.8 * $font-size-text);
     background-color: var(--color-tertiary);
+    overflow-x: hidden;
 
     @include respond-to('breakpoint-576') {
         font-size: $font-size-text;
@@ -159,7 +160,7 @@ footer {
 
     &-about,
     &-links {
-        padding: 1.5rem 0;
+        padding: 2rem 0;
     }
 
     &-contact-title,
@@ -215,14 +216,14 @@ footer {
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        padding: 1.25rem;
-        gap: 1.25rem;
+        padding: 1.5rem;
+        gap: 1.5rem;
         max-width: 100%;
 
         @include respond-to('breakpoint-768') {
             flex-direction: row;
             justify-content: space-between;
-            padding: 1.25rem 2.5rem;
+            padding: 1.5rem 2.5rem;
         }
 
         &-social {
